[project]
name = "fe25519"
version = "2.0.0"
description = """\
    Pure-Python data structure for working with Ed25519 \
    (and Ristretto) field elements and operations.\
    """
license = {text = "MIT"}
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.7"

[project.urls]
Repository = "https://github.com/nthparty/fe25519"
Documentation = "https://fe25519.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=5.0",
    "sphinx-rtd-theme~=2.0.0"
]
test = [
    "pytest~=7.4; python_version < '3.12'",
    "pytest~=8.2; python_version >= '3.12'",
    "pytest-cov~=4.1; python_version < '3.12'",
    "pytest-cov~=5.0; python_version >= '3.12'",
    "parts~=2.1",
    "bitlist~=1.2",
    "fountains~=2.2"
]
lint = [
    "pylint~=2.17.0; python_version < '3.12'",
    "pylint~=3.2.0; python_version >= '3.12'"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=68.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=fe25519 --cov-report term-missing"
