[project]
name = "fe25519"
version = "2.0.0"
description = """\
    Pure-Python data structure for working with Ed25519 \
    (and Ristretto) field elements and operations.\
    """
license = "MIT"
authors = [
    {name = "Andrei Lapets"},
    {email = "a@lapets.io"}
]
readme = "README.rst"
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/nthparty/fe25519"
Documentation = "https://fe25519.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=7.4",
    "sphinx-rtd-theme~=3.0"
]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0",
    "parts~=4.0",
    "bitlist~=2.0",
    "fountains~=3.0"
]
lint = [
    "pylint~=3.3"
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=77.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=fe25519 --cov-report term-missing"
